--- a/css/style.css
+++ b/css/style.css
@@ -30,3 +30,7 @@ html, body {
 .card {
   margin-top: -200px;
 }
+
+.collection a.collection-item:not(.active):hover {
+  background-color: #607d8b; 
+}
