--- a/css/style.css
+++ b/css/style.css
@@ -32,5 +32,5 @@ html, body {
 }
 
 .collection a.collection-item:not(.active):hover {
-  background-color: #607d8b; 
+  background-color: #eceff1; 
 }
